--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -3,7 +3,7 @@
     padding: 10px;
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     width: 150px;
 
     border-radius: 5px;
